--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:id="@+id/section_label"
+        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,40 +22,48 @@
         android:textColor="@android:color/black"
         android:textSize="25dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:hint="@+id/editTextHint"
-        android:layout_marginTop="81dp"
-        android:minWidth="150dp"
-        android:layout_below="@+id/section_label"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:hint="@+id/editText2Hint"
-        android:layout_below="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_marginTop="88dp"
-        android:minWidth="150dp" />
-
     <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_alignTop="@+id/editText"
-        android:layout_toEndOf="@+id/section_label"
-        android:layout_alignParentRight="true" />
-
-    <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner2"
-        android:layout_alignTop="@+id/editText2"
-        android:layout_toEndOf="@+id/section_label"
-        android:layout_alignParentRight="true" />
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/editText"
+        android:layout_toStartOf="@+id/imageView" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:backgroundTint="#00bee4"
+        android:layout_below="@+id/section_label"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="21dp" />
+
+    <Spinner
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignTop="@+id/spinner2"
+        android:layout_toEndOf="@+id/imageView" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/arrow"
+        android:layout_below="@+id/editText"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:backgroundTint="#00bee4"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/spinner2"
+        android:layout_alignParentStart="true"
+        android:editable="false"
+        android:enabled="false" />
+
 
 </RelativeLayout>
