--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,9 +26,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner2"
-        android:layout_marginTop="23dp"
         android:layout_below="@+id/editText"
-        android:layout_toStartOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -43,8 +42,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:layout_alignTop="@+id/spinner2"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/imageView" />
 
     <ImageView
         android:layout_width="50dp"
